Linters are nice

--- a/lists.html
+++ b/lists.html
@@ -1,30 +1,37 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>An Average Web Server &mdash; Lists</title>
-</head>
-<body>
+  <head>
+    <title>An Average Web Server &mdash; Lists</title>
+  </head>
+  <body>
+    <a href="index.html">
+      <img
+        src="https://byu.instructure.com/courses/12541/files/4254269/download"
+        alt="Unit 1 logo: a series of dots with arrows pointing from one dot to the next."
+        width="80"
+      />
+    </a>
 
-<a href="index.html"><img src="https://byu.instructure.com/courses/12541/files/4254269/download" alt="Unit 1 logo: a series of dots with arrows pointing from one dot to the next." width="80" /></a>
+    <h1>Demonstrating Lists</h1>
+    <p>Here we have two lists. The first is ordered, and the second is unordered.</p>
 
-<h1>Demonstrating Lists</h1>
-<p>Here we have two lists. The first is ordered, and the second is unordered.</p>
+    <ol>
+      <li>First thing</li>
+      <li>Second thing</li>
+    </ol>
 
-<ol>
-	<li>First thing</li>
-	<li>Second thing</li>
-</ol>
+    <ul>
+      <li><strong>Third</strong> thing, but in a different list</li>
+      <li><em>Fourth</em> thing, also different list</li>
+    </ul>
 
-<ul>
-	<li><strong>Third</strong> thing, but in a different list</li>
-	<li><em>Fourth</em> thing, also different list</li>
-</ul>
+    <hr />
 
-<hr />
-
-<p><em>This message brought to you by C S 260</em></p>
-<img src="https://byu.instructure.com/courses/12541/files/4254184/download" alt="CS 260: Web Programming" height="180" />
-
-</body>
+    <p><em>This message brought to you by C S 260</em></p>
+    <img
+      src="https://byu.instructure.com/courses/12541/files/4254184/download"
+      alt="CS 260: Web Programming"
+      height="180"
+    />
+  </body>
 </html>
-
