--- a/links.html
+++ b/links.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>An Average Web Server &mdash; Links</title>
-</head>
-<body>
+  <head>
+    <title>An Average Web Server &mdash; Links</title>
+  </head>
+  <body>
+    <a href="index.html">
+      <img
+        src="https://byu.instructure.com/courses/12541/files/4254269/download"
+        alt="Unit 1 logo: a series of dots with arrows pointing from one dot to the next."
+        width="80"
+      />
+    </a>
 
-<a href="index.html"><img src="https://byu.instructure.com/courses/12541/files/4254269/download" alt="Unit 1 logo: a series of dots with arrows pointing from one dot to the next." width="80" /></a>
+    <h1>Demonstrating Links</h1>
+    <p>Trying out some links:</p>
 
-<h1>Demonstrating Links</h1>
-<p>Trying out some links:</p>
+    <ul>
+      <li><a href="https://startpage.com" target="_blank">Startpage</a> is better than Google</li>
+      <li><a href="https://duckduckgo.com" target="_blank">DuckDuckGo</a> is cool, too</li>
+      <li>Fine, here's <a href="https://youtu.be/iik25wqIuFo">Google</a></li>
+    </ul>
 
-<ul>
-	<li><a href="https://startpage.com" target="_blank">Startpage</a> is better than Google</li>
-	<li><a href="https://duckduckgo.com" target="_blank">DuckDuckGo</a> is cool, too</li>
-	<li>Fine, here's <a href="https://youtu.be/iik25wqIuFo">Google</a></li>
-</ul>
+    <hr />
 
-<hr />
-
-<p><em>This message brought to you by C S 260</em></p>
-<img src="https://byu.instructure.com/courses/12541/files/4254184/download" alt="CS 260: Web Programming" height="180" />
-
-</body>
+    <p><em>This message brought to you by C S 260</em></p>
+    <img
+      src="https://byu.instructure.com/courses/12541/files/4254184/download"
+      alt="CS 260: Web Programming"
+      height="180"
+    />
+  </body>
 </html>
-
