--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <a href="index.html">
       <img
-        src="https://byu.instructure.com/courses/12541/files/4254269/download"
+        src="assets/images/unit1logo.png"
         alt="Unit 1 logo: a series of dots with arrows pointing from one dot to the next."
         width="80"
       />
@@ -28,10 +28,6 @@
     <hr />
 
     <p><em>This message brought to you by C S 260</em></p>
-    <img
-      src="https://byu.instructure.com/courses/12541/files/4254184/download"
-      alt="CS 260: Web Programming"
-      height="180"
-    />
+    <img src="assets/images/CS260.jpg" alt="CS 260: Web Programming" height="180" />
   </body>
 </html>
