Add portfolio stuffs

--- a/index.html
+++ b/index.html
@@ -12,12 +12,102 @@
       />
     </a>
 
-    <h1>Introduction</h1>
-    <p>Hi, my name is James Robinson</p>
+    <h1>About</h1>
+    <p>My name is James Robinson. I've been a programmer for nearly 10 years.</p>
 
     <hr />
 
-    <h2>HTML Demos</h2>
+    <h2>Projects</h2>
+    <p>
+      Here's just a few things I worked on myself that I'm proud of. You can
+      <a href="https://github.com/AverageHelper" target="_blank">check my GitHub</a> for more:
+    </p>
+
+    <ul>
+      <li>
+        <a href="https://github.com/AverageHelper/Gamgee" target="_blank">Gamgee</a> &ndash; A fun
+        little Discord bot to help manage a music queue for public DJ events. Written in
+        <a href="https://www.typescriptlang.org" target="_blank">TypeScript</a>.
+      </li>
+      <li>
+        <a href="https://github.com/AverageHelper/ItemEncryptor" target="_blank">ItemEncryptor</a>
+        &ndash; A <a href="https://www.swift.org" target="_blank">Swift</a> package to make data
+        encryption easy. I use this in some of my smaller projects to facilitate end-to-end
+        encryption of sensitive data.
+      </li>
+      <li>
+        <a href="https://github.com/AverageHelper/accountable-vue" target="_blank">Accountable</a>
+        &ndash; An
+        <a href="https://en.wikipedia.org/wiki/End-to-end_encryption" target="_blank">E2EE</a>
+        finance app for keeping track of account balances. I had a version of this written in Swift
+        for iOS, but I've since began porting that project to the web for better cross-platform
+        compatibility. Written in
+        <a href="https://www.typescriptlang.org" target="_blank">TypeScript</a> using
+        <a href="https://vuejs.org" target="_blank">Vue.js</a>.
+      </li>
+      <li>
+        <a href="https://apps.apple.com/us/app/trump-donald/id1036041535" target="_blank"
+          >Trump Donald</a
+        >
+        &ndash; An iOS application based on the game
+        <a href="https://en.wikipedia.org/wiki/Whac-A-Mole" target="_blank">Whac-a-mole</a>.
+      </li>
+      <li>
+        <a href="https://averagehelper.github.io" target="_blank">My blog</a> &ndash; An experiment
+        to see how GitHub Pages work. I post ramblings there from time to time. I forked the Jekyll
+        template from
+        <a href="https://github.com/cotes2020/jekyll-theme-chirpy" target="_blank">cotes2020</a> and
+        made some modifications. I wrote the posts in
+        <a href="https://www.markdownguide.org" target="_blank">Markdown</a>.
+      </li>
+    </ul>
+
+    <hr />
+
+    <h2>Experience</h2>
+    <p>
+      I've been in the software industry for a number of years, working mainly with open-source
+      projects and mobile applications. I recently entered the workforce in the industry, working
+      mainly with web technologies ever since.
+    </p>
+    <ul>
+      <li>
+        <a href="https://inventoryshield.com" target="_blank">Inventory Shield, LLC</a> (2018 -
+        present) &ndash; I am a senior developer at this startup company, working with
+        <a href="https://vuejs.org" target="_blank">Vue.js</a>,
+        <a href="https://www.typescriptlang.org" target="_blank">TypeScript</a>, and
+        <a href="https://nodejs.org" target="_blank">Node.js</a> to help design and build our
+        <a href="https://inventoryshield.com" target="_blank">inventory-</a> and
+        <a href="https://referralreactor.com" target="_blank">referral-management</a> products. Our
+        products include platform applications for
+        <a href="https://apps.apple.com/us/app/inventory-shield/id1502458904" target="_blank"
+          >iOS</a
+        >
+        and
+        <a
+          href="https://play.google.com/store/apps/details?id=com.inventoryshield.app"
+          target="_blank"
+          >Android</a
+        >
+        which I helped to design and implement.
+      </li>
+    </ul>
+
+    <hr />
+
+    <h2>Contact</h2>
+    <p>If you need to reach me, do you really? If you must:</p>
+
+    <ul>
+      <li><a href="https://github.com/AverageHelper" target="_blank">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/090391a4" target="_blank">LinkedIn</a></li>
+      <li><a href="https://twitter.com/avghelper" target="_blank">Twitter</a></li>
+      <li><a href="mailto:avghelper.5fh6g@simplelogin.co">Email</a></li>
+    </ul>
+
+    <hr />
+
+    <!--<h2>HTML Demos</h2>
     <p>To demonstrate what I know:</p>
 
     <ul>
@@ -27,7 +117,7 @@
 
     <hr />
 
-    <p><em>This message brought to you by C S 260</em></p>
-    <img src="assets/images/CS260.jpg" alt="CS 260: Web Programming" height="180" />
+		<p><em>This message brought to you by C S 260</em></p>
+    <img src="assets/images/CS260.jpg" alt="CS 260: Web Programming" height="180" />-->
   </body>
 </html>
