Add styles for mobile and tablet sizes

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
     <title>An Average Web Server</title>
     <link rel="stylesheet" type="text/css" href="styles/variables.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="styles/colors.css" media="screen" />
@@ -116,8 +117,6 @@
         <li><a href="https://twitter.com/avghelper" target="_blank">Twitter</a></li>
         <li><a href="mailto:avghelper.5fh6g@simplelogin.co">Email</a></li>
       </ul>
-
-      <hr />
     </main>
 
     <!--<h2 id="demo">HTML Demos</h2>
