--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>An Average Web Server</title>
-    <link rel="stylesheet" type="text/css" href="styles/variables.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="styles/colors.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="styles/typography.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="styles/style.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/styles/style.css" media="screen" />
   </head>
   <body>
-    <a href="index.html">
+    <a href="/">
       <img
-        src="assets/images/unit1logo.png"
+        src="/assets/images/unit1logo.png"
         alt="Unit 1 logo: a series of dots with arrows pointing from one dot to the next."
         width="80"
       />
     </a>
     <nav>
       <ul>
-        <li><a href="index.html">What</a></li>
-        <li><a href="index.html">Goes</a></li>
-        <li><a href="index.html">Here?</a></li>
+        <li><a href="/">What</a></li>
+        <li><a href="/">Goes</a></li>
+        <li><a href="/">Here?</a></li>
       </ul>
     </nav>
 
@@ -130,6 +127,6 @@
     <hr />
 
 		<p><em>This message brought to you by C S 260</em></p>
-    <img src="assets/images/CS260.jpg" alt="CS 260: Web Programming" height="180" />-->
+    <img src="/assets/images/CS260.jpg" alt="CS 260: Web Programming" height="180" />-->
   </body>
 </html>
