--- a/links.html
+++ b/links.html
@@ -6,7 +6,7 @@
   <body>
     <a href="index.html">
       <img
-        src="assets/images/unit1logo.png"
+        src="/assets/images/unit1logo.png"
         alt="Unit 1 logo: a series of dots with arrows pointing from one dot to the next."
         width="80"
       />
@@ -24,6 +24,6 @@
     <hr />
 
     <p><em>This message brought to you by C S 260</em></p>
-    <img src="assets/images/CS260.jpg" alt="CS 260: Web Programming" height="180" />
+    <img src="/assets/images/CS260.jpg" alt="CS 260: Web Programming" height="180" />
   </body>
 </html>
