Don't gotta make it easy lol

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main class="content">
       <h1 id="about">About</h1>
-      <p>My name is James Robinson. I've been a programmer for nearly 10 years.</p>
+      <p>My name is James. I've been a programmer for nearly 10 years.</p>
 
       <hr />
 
