Hide the useless nav

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         width="80"
       />
     </a>
-    <nav>
+    <!-- <nav>
       <ul>
         <li><a href="/">What</a></li>
         <li><a href="/">Goes</a></li>
         <li><a href="/">Here?</a></li>
       </ul>
-    </nav>
+    </nav> -->
 
     <main class="content">
       <h1 id="about">About</h1>
