Add another project

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" type="text/css" href="/styles/style.css" media="screen" />
   </head>
   <body>
-    <a href="/">
+    <!-- <a href="/">
       <img
         src="/assets/images/unit1logo.png"
         alt="Unit 1 logo: a series of dots with arrows pointing from one dot to the next."
         width="80"
       />
-    </a>
+    </a> -->
     <!-- <nav>
       <ul>
         <li><a href="/">What</a></li>
@@ -38,6 +38,11 @@
           <a href="https://github.com/AverageHelper/Gamgee" target="_blank">Gamgee</a> &ndash; A fun
           little Discord bot to help manage a music queue for public DJ events. Written in
           <a href="https://www.typescriptlang.org" target="_blank">TypeScript</a>.
+        </li>
+        <li>
+          <a href="https://github.com/AverageHelper/meta-comments" target="_blank">meta-comments</a>
+          &ndash; The first VS Code plugin I ever published! It decorates code based on
+          specially-formatted comments.
         </li>
         <li>
           <a href="https://github.com/AverageHelper/ItemEncryptor" target="_blank">ItemEncryptor</a>
