Add Mastodon link

--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
         <li><a href="https://github.com/AverageHelper" target="_blank">GitHub</a></li>
         <li><a href="https://www.linkedin.com/in/090391a4" target="_blank">LinkedIn</a></li>
         <li><a href="https://twitter.com/avghelper" target="_blank">Twitter</a></li>
+        <li><a rel="me" href="https://fosstodon.org/@avghelper">Mastodon</a></li>
         <li><a href="mailto:avghelper.5fh6g@simplelogin.co">Email</a></li>
       </ul>
     </main>
