chore: Remove cruft

--- a/index.html
+++ b/index.html
@@ -6,21 +6,6 @@
     <link rel="stylesheet" type="text/css" href="/styles/style.css" media="screen" />
   </head>
   <body>
-    <!-- <a href="/">
-      <img
-        src="/assets/images/unit1logo.png"
-        alt="Unit 1 logo: a series of dots with arrows pointing from one dot to the next."
-        width="80"
-      />
-    </a> -->
-    <!-- <nav>
-      <ul>
-        <li><a href="/">What</a></li>
-        <li><a href="/">Goes</a></li>
-        <li><a href="/">Here?</a></li>
-      </ul>
-    </nav> -->
-
     <main class="content">
       <h1 id="about">About</h1>
       <p>My name is James. I've been a programmer for nearly 10 years.</p>
@@ -114,25 +99,26 @@
       <p>If you need to reach me, do you really? If you must:</p>
 
       <ul>
-        <li><a href="https://github.com/AverageHelper" target="_blank">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/090391a4" target="_blank">LinkedIn</a></li>
-        <li><a href="https://twitter.com/avghelper" target="_blank">Twitter</a></li>
-        <li><a rel="me" href="https://fosstodon.org/@avghelper">Mastodon</a></li>
-        <li><a href="mailto:avghelper.5fh6g@simplelogin.co">Email</a></li>
+        <li>
+          GitHub:
+          <a rel="me" href="https://github.com/AverageHelper" target="_blank">AverageHelper</a>
+        </li>
+        <li>
+          LinkedIn:
+          <a rel="me" href="https://www.linkedin.com/in/090391a4" target="_blank">James</a>
+        </li>
+        <li>
+          Twitter: <a rel="me" href="https://twitter.com/avghelper" target="_blank">@avghelper</a>
+        </li>
+        <li>
+          Mastodon: <a rel="me" href="https://fosstodon.org/@avghelper">@avghelper@average.name</a>
+        </li>
+        <li>
+          Email:
+          <a href="mailto:avghelper.5fh6g@simplelogin.co">avghelper.5fh6g@simplelogin.co</a> (Yes,
+          this is my email. If the `.co` scares you, don't email me lol)
+        </li>
       </ul>
     </main>
-
-    <!--<h2 id="demo">HTML Demos</h2>
-    <p>To demonstrate what I know:</p>
-
-    <ul>
-      <li><a href="lists.html">Lists</a></li>
-      <li><a href="links.html">Links</a></li>
-    </ul>
-
-    <hr />
-
-		<p><em>This message brought to you by C S 260</em></p>
-    <img src="/assets/images/CS260.jpg" alt="CS 260: Web Programming" height="180" />-->
   </body>
 </html>
