fix: Shorter Mastodon alias

--- a/index.html
+++ b/index.html
@@ -110,9 +110,7 @@
         <li>
           Twitter: <a rel="me" href="https://twitter.com/avghelper" target="_blank">@avghelper</a>
         </li>
-        <li>
-          Mastodon: <a rel="me" href="https://fosstodon.org/@avghelper">@avghelper@average.name</a>
-        </li>
+        <li>Mastodon: <a rel="me" href="https://fosstodon.org/@avghelper">@avg@average.name</a></li>
         <li>
           Email:
           <a href="mailto:avghelper.5fh6g@simplelogin.co">avghelper.5fh6g@simplelogin.co</a> (Yes,
