feat: Faster style loading (hopefully)

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>An Average Web Server</title>
+    <link rel="stylesheet" type="text/css" href="/styles/variables.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/styles/colors.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/styles/typography.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/styles/style.css" media="screen" />
   </head>
   <body>
