chore: 'Accountable' is called 'Recorded Finance' now

--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
           encryption of sensitive data.
         </li>
         <li>
-          <a href="https://github.com/AverageHelper/accountable-vue" target="_blank">Accountable</a>
+          <a href="https://recorded.finance/" target="_blank">Recorded Finance</a>
           &ndash; An
-          <a href="https://en.wikipedia.org/wiki/End-to-end_encryption" target="_blank">E2EE</a>
+          <a href="https://en.wikipedia.org/wiki/End-to-end_encryption" target="_blank"
+            >end-to-end encrypted</a
+          >
           finance app for keeping track of account balances. I had a version of this written in
           Swift for iOS, but I've since began porting that project to the web for better
           cross-platform compatibility. Written in
