chore: Update blog info

--- a/index.html
+++ b/index.html
@@ -59,11 +59,10 @@
         </li>
         <li>
           <a href="https://averagehelper.github.io" target="_blank">My blog</a> &ndash; An
-          experiment to see how GitHub Pages work. I post ramblings there from time to time. I
-          forked the Jekyll template from
-          <a href="https://github.com/cotes2020/jekyll-theme-chirpy" target="_blank">cotes2020</a>
-          and made some modifications. I wrote the posts in
-          <a href="https://www.markdownguide.org" target="_blank">Markdown</a>.
+          experiment to see how GitHub Pages work. I post ramblings there from time to time. The
+          posts are written in <a href="https://www.markdownguide.org" target="_blank">Markdown</a>,
+          and the site is generated automagically using
+          <a href="https://www.zola.com/" target="_blank">Zola</a>.
         </li>
       </ul>
 
