chore: Update description for some projects

--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
   <body>
     <main class="content">
       <h1 id="about">About</h1>
-      <p>My name is James. I've been a programmer for nearly 10 years.</p>
+      <p>
+        My name is James. I've been a programmer for nearly 10 years. This portfolio is real basic,
+        made to quickly point to my other projects and experience.
+      </p>
+      <p>
+        It isn't much to look at, but it is mine. You can find the source code
+        <a href="https://github.com/AverageHelper/portfolio" target="_blank">on GitHub</a>.
+      </p>
 
       <hr />
 
@@ -39,16 +46,19 @@
           encryption of sensitive data.
         </li>
         <li>
-          <a href="https://recorded.finance/" target="_blank">Recorded Finance</a>
+          <a href="https://recorded.finance" target="_blank">Recorded Finance</a>
           &ndash; An
           <a href="https://en.wikipedia.org/wiki/End-to-end_encryption" target="_blank"
             >end-to-end encrypted</a
           >
-          finance app for keeping track of account balances. I had a version of this written in
-          Swift for iOS, but I've since began porting that project to the web for better
-          cross-platform compatibility. Written in
-          <a href="https://www.typescriptlang.org" target="_blank">TypeScript</a> using
-          <a href="https://vuejs.org" target="_blank">Vue.js</a>.
+          finance app for keeping track of account balances. I had a version of this written for iOS
+          in Swift, but I've began to port that project to the web for better cross-platform
+          compatibility and accessibility. The project is still in its infant stages, with several
+          front-end glitches I want to fix before I "release" the project into the wild. The
+          front-end is written in
+          <a href="https://svelte.dev" target="_blank">Svelte</a>, with
+          <a href="https://www.typescriptlang.org" target="_blank">TypeScript</a> on the front- and
+          back-end.
         </li>
         <li>
           <a href="https://apps.apple.com/us/app/trump-donald/id1036041535" target="_blank"
@@ -111,14 +121,14 @@
           LinkedIn:
           <a rel="me" href="https://www.linkedin.com/in/090391a4" target="_blank">James</a>
         </li>
+        <li>Mastodon: <a rel="me" href="https://fosstodon.org/@avghelper">@avg@average.name</a></li>
         <li>
           Twitter: <a rel="me" href="https://twitter.com/avghelper" target="_blank">@avghelper</a>
         </li>
-        <li>Mastodon: <a rel="me" href="https://fosstodon.org/@avghelper">@avg@average.name</a></li>
         <li>
           Email:
           <a href="mailto:avghelper.5fh6g@simplelogin.co">avghelper.5fh6g@simplelogin.co</a> (Yes,
-          this is my email. If the `.co` scares you, don't email me lol)
+          <code>.co</code>.)
         </li>
       </ul>
     </main>
