feat: Better intro

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>An Average Web Server</title>
+    <title>Portfolio &mdash; An Average Developer</title>
     <link rel="stylesheet" type="text/css" href="/styles/variables.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/styles/colors.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/styles/typography.css" media="screen" />
@@ -10,13 +10,15 @@
   </head>
   <body>
     <main class="content">
-      <h1 id="about">About</h1>
+      <h1 id="about">About Myself</h1>
       <p>
-        My name is James. I've been a programmer for nearly 10 years. This portfolio is real basic,
-        made to quickly point to my other projects and experience.
+        My name is James. I've been a programmer for nearly 10 years. I go by "Average Helper"
+        online, partly because my name is so generic. Average, really. I try to be helpful where I
+        can, especially to write respectful software.
       </p>
       <p>
-        It isn't much to look at, but it is mine. You can find the source code
+        This portfolio is real basic, made to quickly point to my other projects and experience. It
+        isn't much to look at, but it is mine. You can find the source code
         <a href="https://github.com/AverageHelper/portfolio" target="_blank">on GitHub</a>.
       </p>
 
@@ -110,7 +112,7 @@
       <hr />
 
       <h2 id="contact">Contact</h2>
-      <p>If you need to reach me, do you really? If you must:</p>
+      <p>If you must reach me, I'm often found in these places:</p>
 
       <ul>
         <li>
@@ -118,10 +120,13 @@
           <a rel="me" href="https://github.com/AverageHelper" target="_blank">AverageHelper</a>
         </li>
         <li>
+          Mastodon:
+          <a rel="me" href="https://fosstodon.org/@avghelper" target="_blank">@avg@average.name</a>
+        </li>
+        <li>
           LinkedIn:
           <a rel="me" href="https://www.linkedin.com/in/090391a4" target="_blank">James</a>
         </li>
-        <li>Mastodon: <a rel="me" href="https://fosstodon.org/@avghelper">@avg@average.name</a></li>
         <li>
           Twitter: <a rel="me" href="https://twitter.com/avghelper" target="_blank">@avghelper</a>
         </li>
