--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       </p>
       <p>
         This portfolio is real basic, made to quickly point to my other projects and experience. It
-        isn't much to look at, but it is mine. You can find the source code
-        <a href="https://github.com/AverageHelper/portfolio" target="_blank">on GitHub</a>.
+        isn't much to look at, but it is mine.
       </p>
 
       <hr />
