fix: Update email

--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
         </li>
         <li>
           Email:
-          <a href="mailto:avghelper.5fh6g@simplelogin.co">avghelper.5fh6g@simplelogin.co</a> (Yes,
-          ".co".)
+          <a href="mailto:jrobinson@inventoryshield.com">jrobinson@inventoryshield.com</a>
         </li>
       </ul>
     </main>
