fix: Revert email change

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
           Twitter: <a rel="me" href="https://twitter.com/avghelper" target="_blank">@avghelper</a>
         </li>
         <li>
-          Email:
-          <a href="mailto:jrobinson@inventoryshield.com">jrobinson@inventoryshield.com</a>
+          Personal Email:
+          <a href="mailto:avghelper.5fh6g@simplelogin.co">avghelper.5fh6g@simplelogin.co</a>
         </li>
       </ul>
     </main>
