fix: Don't flash the background on first load

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>Portfolio &mdash; An Average Developer</title>
+    <style>
+      @media only screen and (prefers-color-scheme: dark) {
+        html {
+          /* So the entire background doesn't flash on first load: */
+          background-color: #181818;
+        }
+      }
+    </style>
     <link rel="stylesheet" type="text/css" href="/styles/variables.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/styles/colors.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/styles/typography.css" media="screen" />
