chore: Update bio

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <main class="content">
       <h1 id="about">About Myself</h1>
       <p>
-        My name is James. I've been a programmer for nearly 10 years. I go by "Average Helper"
-        online, partly because my name is so generic. Average, really. I try to be helpful where I
-        can, especially to write respectful software.
+        I go by "Average Helper" online, partly because my name is super generic. Average, really.
+        I've been a programmer for about 12 years. I try to be helpful where I can, especially to
+        write respectful software.
       </p>
       <p>
         This portfolio is real basic, made to quickly point to my other projects and experience. It
