chore: Update contact details

--- a/index.html
+++ b/index.html
@@ -120,14 +120,10 @@
         </li>
         <li>
           Mastodon:
-          <a rel="me" href="https://fosstodon.org/@avghelper" target="_blank">@avg@average.name</a>
-        </li>
-        <!-- <li>
-          LinkedIn:
-          <a rel="me" href="https://www.linkedin.com/in/090391a4" target="_blank">James</a>
-        </li> -->
-        <li>
-          Twitter: <a rel="me" href="https://twitter.com/avghelper" target="_blank">@avghelper</a>
+          <!-- Eventually I want @avg@average.name... -->
+          <a rel="me" href="https://fosstodon.org/@avghelper" target="_blank"
+            >@avghelper@fosstodon.org</a
+          >
         </li>
         <li>
           Personal Email:
