chore: Add Codeberg profile

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       <h2 id="projects">Projects</h2>
       <p>
         Here's just a few things I worked on myself that I'm proud of. You can
-        <a href="https://github.com/AverageHelper" target="_blank">check my GitHub</a> for more:
+        <a href="https://github.com/AverageHelper" target="_blank">check my GitHub</a> or
+        <a href="https://codeberg.org/AverageHelper" target="_blank">Codeberg</a> for more:
       </p>
 
       <ul>
