feat: Less obnoxious hint links

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li>
           <a href="https://github.com/AverageHelper/Gamgee" target="_blank">Gamgee</a> &ndash; A fun
           little Discord bot to help manage a music queue for public DJ events. Written in
-          <a href="https://www.typescriptlang.org" target="_blank">TypeScript</a>.
+          <a href="https://www.typescriptlang.org" target="_blank" class="hint">TypeScript</a>.
         </li>
         <li>
           <a href="https://github.com/AverageHelper/meta-comments" target="_blank">meta-comments</a>
@@ -43,14 +43,14 @@
         </li>
         <li>
           <a href="https://github.com/AverageHelper/ItemEncryptor" target="_blank">ItemEncryptor</a>
-          &ndash; A <a href="https://www.swift.org" target="_blank">Swift</a> package to make data
-          encryption easy. I use this in some of my smaller projects to facilitate end-to-end
-          encryption of sensitive data.
+          &ndash; A <a href="https://www.swift.org" target="_blank" class="hint">Swift</a> package
+          to make data encryption easy. I use this in some of my smaller projects to facilitate
+          end-to-end encryption of sensitive data.
         </li>
         <li>
           <a href="https://recorded.finance" target="_blank">Recorded Finance</a>
           &ndash; An
-          <a href="https://en.wikipedia.org/wiki/End-to-end_encryption" target="_blank"
+          <a href="https://en.wikipedia.org/wiki/End-to-end_encryption" target="_blank" class="hint"
             >end-to-end encrypted</a
           >
           finance app for keeping track of account balances. I had a version of this written for iOS
@@ -58,23 +58,26 @@
           compatibility and accessibility. The project is still in its infant stages, with several
           front-end glitches I want to fix before I "release" the project into the wild. The
           front-end is written in
-          <a href="https://svelte.dev" target="_blank">Svelte</a>, with
-          <a href="https://www.typescriptlang.org" target="_blank">TypeScript</a> on the front- and
-          back-end.
+          <a href="https://svelte.dev" target="_blank" class="hint">Svelte</a>, with
+          <a href="https://www.typescriptlang.org" target="_blank" class="hint">TypeScript</a> on
+          the front- and back-end.
         </li>
         <li>
           <a href="https://apps.apple.com/us/app/trump-donald/id1036041535" target="_blank"
             >Trump Donald</a
           >
           &ndash; An iOS application based on the game
-          <a href="https://en.wikipedia.org/wiki/Whac-A-Mole" target="_blank">Whac-a-mole</a>.
+          <a href="https://en.wikipedia.org/wiki/Whac-A-Mole" target="_blank" class="hint"
+            >Whac-a-mole</a
+          >.
         </li>
         <li>
           <a href="https://averagehelper.github.io" target="_blank">My blog</a> &ndash; An
           experiment to see how GitHub Pages work. I post ramblings there from time to time. The
-          posts are written in <a href="https://www.markdownguide.org" target="_blank">Markdown</a>,
-          and the site is generated automagically using
-          <a href="https://www.zola.com/" target="_blank">Zola</a>.
+          posts are written in
+          <a href="https://www.markdownguide.org" target="_blank" class="hint">Markdown</a>, and the
+          site is generated automagically using
+          <a href="https://www.zola.com/" target="_blank" class="hint">Zola</a>.
         </li>
       </ul>
 
@@ -90,9 +93,9 @@
         <li>
           <a href="https://inventoryshield.com" target="_blank">Inventory Shield, LLC</a> (2018 -
           present) &ndash; I am a senior developer at this startup company, working with
-          <a href="https://vuejs.org" target="_blank">Vue.js</a>,
-          <a href="https://www.typescriptlang.org" target="_blank">TypeScript</a>, and
-          <a href="https://nodejs.org" target="_blank">Node.js</a> to help design and build our
+          <a href="https://vuejs.org" target="_blank" class="hint">Vue.js</a>,
+          <a href="https://www.typescriptlang.org" target="_blank" class="hint">TypeScript</a>, and
+          <a href="https://nodejs.org" target="_blank" class="hint">Node.js</a> to help design and build our
           <a href="https://inventoryshield.com" target="_blank">inventory-</a> and
           <a href="https://referralreactor.com" target="_blank">referral-management</a> products.
           Our products include platform applications for
